fix logo spacing

--- a/css/main.css
+++ b/css/main.css
@@ -229,7 +229,10 @@ images
 }
 
 .project-logo {
+  max-width: 100%;
   padding-bottom: 10px;
+  height: auto;
+  width: 200px;
 }
 .img-fluid {
   max-width: 100%; 
